# SoBigDataAntidiscriminationPypi

./: MANIFEST.in  README.md  setup.cfg
src/algorithms/: anonymization_scheme.py  anti_discrimination.py
src/antiDiscrimination/algorithms/: anonymization_scheme.py  anti_discrimination.py
src/antiDiscrimination/entities/: dataset.py  dataset_CSV.py  dataset_DataFrame.py
src/antiDiscrimination/tests/: anti_discrimination_test.py
src/entities/: dataset.py  dataset_CSV.py  dataset_DataFrame.py
