[metadata]
name = anonymization-crisesURV
version = 0.0.11
author = Crises
author_email = crisesurv@gmail.com
description = Anonymization library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CrisesUrv/SoBigDataTraining/tree/master/anonymization
project_urls =
    Bug Tracker = https://github.com/CrisesUrv/SoBigDataTraining/tree/master/anonymization
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas
    ipython
    tqdm
    nltk
    jinja2
    ipywidgets
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where = src